--- a/package.json
+++ b/package.json
@@ -4,25 +4,19 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
+    "native-base": "2.8.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
-    "react-native-creditcard-prixpay": "^0.0.3",
-    "react-native-timeline-listview": "^0.2.3",
-    "react-navigation": "^3.0.9"
+    "react-native-vector-icons": "^6.3.0",
+    "react-navigation": "2.6.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^32.0.0"
+    "babel-preset-expo": "^5.0.0"
   },
   "private": true
 }
