--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^32.0.0",
+    "formik": "^1.5.0",
     "native-base": "2.8.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
+    "react-native-elements": "^1.0.0",
+    "react-native-form": "^2.1.3",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "2.6.2"
   },
